--- a/Project/Client/Views/Product/Collection.cshtml
+++ b/Project/Client/Views/Product/Collection.cshtml
@@ -102,7 +102,7 @@
         }
         else
         {
-            <p>khong co library</p>
+            <p>Library is empty</p>
         }
     </div>
 </div>
