--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -259,78 +259,90 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var product in Model.Product)
+            @if (Model.Product != null)
             {
-                <tr>
-                    <!-- QR Code Column -->
-                    <td class="text-center">
-                        <img src="@product.QrCode" alt="QR Code" width="100" height="100" class="qr-thumbnail" data-bs-toggle="modal" data-bs-target="#qrModal" data-qr="@product.QrCode" style="cursor:pointer;" />
-                    </td>
-                    <td class="text-center">@product.Name</td>
-                    <td class="text-center">@string.Format("{0:N0} VNĐ", product.Price)</td>
-                    <td class="text-center">@product.Sold</td>
-                    <td class="text-center">
-                        <div>Likes: @product.Interactions?.NumberOfLikes</div>
-                        <div>Views: @product.Interactions?.NumberOfViews</div>
-                    </td>
-                    <td class="text-center">@product.Discount %</td>
-                    <td class="text-center">@product.Platform</td>
-                    <td class="text-center">
-                        @if (product.Links != null)
-                        {
-                            string secondImageUrl = null;
-                            int cloudinaryImageCount = 0;
-
-                            foreach (var link in product.Links)
+                @foreach (var product in Model.Product)
+                {
+                    <tr>
+                        <!-- QR Code Column -->
+                        <td class="text-center">
+                            <img src="@product.QrCode" alt="QR Code" width="100" height="100" class="qr-thumbnail" data-bs-toggle="modal" data-bs-target="#qrModal" data-qr="@product.QrCode" style="cursor:pointer;" />
+                        </td>
+                        <td class="text-center">@product.Name</td>
+                        <td class="text-center">@string.Format("{0:N0} VNĐ", product.Price)</td>
+                        <td class="text-center">@product.Sold</td>
+                        <td class="text-center">
+                            <div>Likes: @product.Interactions?.NumberOfLikes</div>
+                            <div>Views: @product.Interactions?.NumberOfViews</div>
+                        </td>
+                        <td class="text-center">@product.Discount %</td>
+                        <td class="text-center">@product.Platform</td>
+                        <td class="text-center">
+                            @if (product.Links != null)
                             {
-                                if (link.Url.Contains("cloudinary"))
-                                {
-                                    cloudinaryImageCount++;
+                                string secondImageUrl = null;
+                                int cloudinaryImageCount = 0;
 
-                                    if (cloudinaryImageCount == 2)
+                                foreach (var link in product.Links)
+                                {
+                                    if (link.Url.Contains("cloudinary"))
                                     {
-                                        secondImageUrl = link.Url;
-                                        break;
+                                        cloudinaryImageCount++;
+
+                                        if (cloudinaryImageCount == 2)
+                                        {
+                                            secondImageUrl = link.Url;
+                                            break;
+                                        }
                                     }
                                 }
-                            }
 
-                            if (secondImageUrl != null)
-                            {
-                                <div style="width: 50px; height: 50px;">
-                                    <img src="@secondImageUrl" alt="Cloudinary Image" style="width: 70px; height: 50px;" />
-                                </div>
-                            }
-                            else
-                            {
-                                <p>Không có hình ảnh thứ hai</p>
-                            }
-                        }
-                    </td>
-                    <td class="text-center">
-                        @if (product.Categories != null)
-                        {
-                            <ul>
-                                @foreach (var category in product.Categories)
+                                if (secondImageUrl != null)
                                 {
-                                    <li>@category.CategoryName</li>
+                                    <div style="width: 50px; height: 50px;">
+                                        <img src="@secondImageUrl" alt="Cloudinary Image" style="width: 70px; height: 50px;" />
+                                    </div>
                                 }
-                            </ul>
-                        }
-                    </td>
-                    <td class="text-center">@product.Status</td>
+                                else
+                                {
+                                    <p>Không có hình ảnh thứ hai</p>
+                                }
+                            }
+                        </td>
+                        <td class="text-center">
+                            @if (product.Categories != null)
+                            {
+                                <ul>
+                                    @foreach (var category in product.Categories)
+                                    {
+                                        <li>@category.CategoryName</li>
+                                    }
+                                </ul>
+                            }
+                        </td>
+                        <td class="text-center">@product.Status</td>
+                        <td class="text-center">
+                            <a asp-action="UpdateProduct" asp-route-id="@product.Id" class="text-danger mx-2">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                        </td>
+                        <td class="text-center">
+                            <a asp-action="DeleteProduct" asp-route-Id="@product.Id" class="text-danger mx-2">
+                                <i class="fas fa-trash"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            }
+            else
+            {
+                <tr>
                     <td class="text-center">
-                        <a asp-action="UpdateProduct" asp-route-id="@product.Id" class="text-danger mx-2">
-                            <i class="fa-regular fa-pen-to-square"></i>
-                        </a>
-                    </td>
-                    <td class="text-center">
-                        <a asp-action="DeleteProduct" asp-route-Id="@product.Id" class="text-danger mx-2">
-                            <i class="fas fa-trash"></i>
-                        </a>
+                        no any product here
                     </td>
                 </tr>
             }
+            
         </tbody>
     </table>
 
