--- a/Project/Client/Views/User/UploadProduct.cshtml.css
+++ b/Project/Client/Views/User/UploadProduct.cshtml.css
@@ -175,5 +175,29 @@
     .imageUrl:hover {
         /*background-color: #f0f8ff;*/ /* Đổi màu nền khi hover */
         transform: scale(1.02); /* Hiệu ứng phóng to nhẹ */
-        /*border-color: #008cba;*/ /* Đổi màu viền khi hover */
+        border-color: #008cba; /* Đổi màu viền khi hover */
+    }
+
+/* Ẩn nút Delete mặc định */
+    .imageUrl .delete-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: none; /* Ẩn nút */
+        background-color: transparent; /* Nền trong suốt */
+        border: none;
+        color: #ff4d4f; /* Màu đỏ */
+        font-size: 16px;
+        cursor: pointer;
+        transition: color 0.3s ease;
+    }
+
+/* Hiển thị nút Delete khi hover vào upload-item */
+    .imageUrl:hover .delete-btn {
+        display: block;
+    }
+
+/* Hiệu ứng khi hover vào nút Delete */
+    .imageUrl .delete-btn:hover {
+        color: #d32f2f; /* Màu đậm hơn khi hover vào nút */
     }
