--- a/Project/Client/Views/Admin/UpdateCategory.cshtml
+++ b/Project/Client/Views/Admin/UpdateCategory.cshtml
@@ -96,6 +96,7 @@
     
 
     <button type="submit" class="btn system-btn" style="margin-top:1.5vw;">Update</button>
+    <a asp-action="CategoriesManager" class="btn btn-secondary" style="margin-top:1.5vw;">Back To List</a>
 </form>
 
 
