--- a/Project/Client/Views/Admin/UpdateReport.cshtml
+++ b/Project/Client/Views/Admin/UpdateReport.cshtml
@@ -12,45 +12,44 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.Id</label>
-                    <input class="form-control system-input" readonly="readonly" />
-                    <span class="text-danger"></span>
+                    <label asp-for="Id" class="system-label">ID</label>
+                    <input asp-for="Id" class="form-control system-input" readonly="readonly" />
+                    <span asp-validation-for="Id" class="text-danger"></span>
                 </div>
                 <div class=" col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.Email</label>
-                    <input class="form-control system-input" disabled />
-                    <span class="text-danger"></span>
+                    <label asp-for="Email" class="system-label">Email</label>
+                    <input asp-for="Email" class="form-control system-input" readonly="readonly" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
             </div>
             
             <div class="row mt-2">
                 <div class="col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.CreatedAt</label>
-                    <input type="date" class="form-control system-input" disabled />
+                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">CreatedAt</label>
+                    <input type="date" asp-for="CreatedAt" class="form-control system-input" readonly="readonly" />
                     <span class="text-danger"></span>
                 </div>
                 <div class="col-md-6 form-group">
-                    <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;">@Model.Status</label>
-                    <select class="form-select system-select" aria-label="Status">
-                        <option value="0">Active</option>
-                        <option value="1">Inactive</option>
-                        <option value="2">Block</option>
-                        <option value="3">Deleted</option>
+                    <label asp-for="Status" class="system-label">Status</label>
+                    <select asp-for="Status" class="form-select system-select" aria-label="Status">
+                        <option value="0">Pending</option>
+                        <option value="1">InProgress</option>
+                        <option value="2">Resolved</option>
                     </select>
-                    <span class="text-danger"></span>
+                    <span asp-validation-for="Status" class="text-danger"></span>
                 </div>
             </div>
 
         </div>
         <div class="col-md-6">
             <div class="form-group mt-2">
-                <label class="d-block" style="font-weight: bold; color: #00A97F; padding-bottom: 5px;" for="description">Description</label>
-                <textarea class="form-control" rows="4" readonly></textarea>
-                <span class="text-danger"></span>
+                <label asp-for="Description" class="system-label">Description</label>
+                <textarea asp-for="Description" readonly="readonly" class="form-control system-input" rows="3"></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
         </div>
-        
     </div>
+    <input type="hidden" name="reportId" value="@Model.Id" />
 
     <div style="margin-top:2vw;">
         <button type="submit" class="btn btn-primary">Update</button>
